--- a/src/main/resources/templates/login/findUserId.html
+++ b/src/main/resources/templates/login/findUserId.html
@@ -14,7 +14,7 @@
 			<div>
 				<p>고객정보와 일치하는 아이디</p>
 					<p class="d-flex justify-content-center m-5">
-						<strong class="fs-3" ></strong>
+						<strong class="fs-3" th:text="${findId}"></strong>
 					</p>	
 			</div>
 		</div>	
