아이디찾기 끝

--- a/src/main/resources/templates/login/findId.html
+++ b/src/main/resources/templates/login/findId.html
@@ -37,7 +37,7 @@
                </div>
             </div>
          </div>
-         <button  type="submit" class="btn btn-primery">아이디 찾기</button>
+         <button  type="submit" class="btn btn-primary mt-4">아이디 찾기</button>
 		</form>
 	</main>
 </body>
