--- a/src/main/resources/static/css/event/eventPage.css
+++ b/src/main/resources/static/css/event/eventPage.css
@@ -18,6 +18,11 @@ a {
     color: #222;
 }
 
+p{
+	margin-bottom: 0;
+}
+
+
 .container{
 	padding: 0;
 }
@@ -93,13 +98,10 @@ a {
 	display:inline-block; 
 	padding:30px; 
 	background:#fff; 
-	width:400px; 
-	height:400px;
+	width:500px; 
+	height:150px;
 	vertical-align:middle; 
 	font-size:15px;
-}
-.select_coupon{
-	height: 200px;
 }
 .btn_receive, .btn_close{
 	width: 30%;
