--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -6,23 +6,27 @@
 <link rel="stylesheet" type="text/css" th:href="@{/css/headerNav.css}">
 </head>
 <body>
-<!-- 예매, 이벤트, 고객센터, 항공편현황, 마이페이지, 삼단바 -->
-<!-- 삼단메뉴: 항공권예매, 나의 예약조회, 이벤트, 고객센터, 항공편현황, 마이페이지 해야함-->
+	<!-- 예매, 이벤트, 고객센터, 항공편현황, 마이페이지, 삼단바 -->
+	<!-- 삼단메뉴: 항공권예매, 나의 예약조회, 이벤트, 고객센터, 항공편현황, 마이페이지 해야함-->
 	<nav>
-			<div class="logo">
-				<a href="/">JB항공</a>
-			</div>
-			<div class="gnb">
-				<a href="/reservation/flightsearch.do">예매</a>
-				<a href="#">이벤트</a>
-				<a href="/main/airplaneStatus.do">항공편 현황</a>
-			</div>
-			<div class="lnb">
-	            <a href="/login/loginPage.do">로그인</a>
-	            <a href="#">로그아웃</a>	            
-	            <a href="/signup/joinPage.do">회원가입</a>
-				<a href="#">마이페이지</a>
-			</div>
+		<div class="logo">
+			<a href="/">JB항공</a>
+		</div>
+		<div class="gnb">
+			<a href="/reservation/flightsearch.do">예매</a> <a href="#">이벤트</a> <a href="/main/airplaneStatus.do">항공편 현황</a>
+		</div>
+		<div class="lnb">
+			<th:block th:if="${session.loginCt==null}">
+				<a href="/login/loginPage.do">로그인</a>
+				<a href="/signup/joinPage.do">회원가입</a>
+			</th:block>
+			<th:block th:unless="${session.loginCt==null}">
+				<a class="btn btn-sm btn-outline-secondary"> <span th:text="${session.loginCt.ctName}"></span> (<span th:text="${session.loginCt.ctId}"></span>)
+				</a> / 
+			<a href="/login/logout.do" class="btn btn-sm btn-danger">로그아웃</a>
+			</th:block>
+			<a href="#">마이페이지</a>
+		</div>
 
 	</nav>
 </body>
