--- a/src/main/resources/templates/reservation/reservationTerms.html
+++ b/src/main/resources/templates/reservation/reservationTerms.html
@@ -19,52 +19,52 @@
 		<!-- <div class="d-flex align-items-center ms-5" th:text="${reservation.rvDepartAp}">2022-10-31(월)</div> -->
 		<div class="d-inline-block" style="margin:auto;">
 			<div class="d-inline-block justify-content-center text-center p-3">
-				<strong class="fs-3" >GMP</strong>
-				<div class="addition">서울/김포</div>
+				<strong class="fs-3" th:text="${si.depAprt}">GMP</strong>
+				<div class="addition" th:text="${reservation.getRvDepartAp()}">서울/김포</div>
 			</div>
 				<div class="d-inline-block text-center p-3">
-					<div>06:40 ~ 07:50</div>
+					<div th:text="${si.depTime}+'~'+${si.arrTime}">06:40 ~ 07:50</div>
 					<div>
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
 			  				<path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
 						</svg>
 					</div>
-					<!-- <div class="d-inline-block pe-2" th:text="${airflight.afEconomy}">이코노미</div>
-					<div class="d-inline-block ps-2" th:text="${airflight.afNo}">B737-800</div> -->
+					<div class="d-inline-block pe-2" th:text="${reservation.getRvSeatGrade()}">이코노미</div>
+					<div class="d-inline-block ps-2" th:text="${si.vihicleId}">B737-800</div>
 				</div>
 			<div class="d-inline-block justify-content-center text-center p-3">
-				<strong class="fs-3">CJU</strong>
-				<div class="addition">제주</div>
+				<strong class="fs-3" th:text="${si.landAprt}">CJU</strong>
+				<div class="addition" th:text="${reservation.getRvLandAp()}">제주</div>
 			</div>
 		</div>
 	</div>
-	<div class="border border-secondary justify-content-center text-center container" >
-		구간2
-	</div>
-	<div class="d-flex border border-secondary container" >
-		<!-- <div class="d-flex align-items-center ms-5" th:text="${reservation.rvDepartAp}">2022-11-02(수)</div> -->
-		<div class="d-inline-block" style="margin:auto;">
-			<div class="d-inline-block justify-content-center text-center p-3">
-				<strong class="fs-3">CJU</strong>
-				<!-- <div class="addition" th:text="${airport.apName}">제주</div> -->
-			</div>
-			<div class="d-inline-block text-center p-3">
-				<div>07:55 ~ 09:05</div>
-				<div>
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
-		  				<path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
-					</svg>
-					
-				</div>
-				<!-- <div class="d-inline-block pe-2" th:text="${airflight.afEconomy}">이코노미</div>
-				<div class="d-inline-block ps-2" th:text="${airflight.alNo}">B737-800</div> -->
-			</div>
-			<div class="d-inline-block justify-content-center text-center p-3">
-				<strong class="fs-3">GMP</strong>
-				<div class="addition">서울/김포</div>
-			</div>
-		</div>
-	</div>
+	<!-- <div class="border border-secondary justify-content-center text-center container" > -->
+	<!-- 	구간2 -->
+	<!-- </div> -->
+	<!-- <div class="d-flex border border-secondary container" > -->
+	<!-- 	&lt;!&ndash; <div class="d-flex align-items-center ms-5" th:text="${reservation.rvDepartAp}">2022-11-02(수)</div> &ndash;&gt; -->
+	<!-- 	<div class="d-inline-block" style="margin:auto;"> -->
+	<!-- 		<div class="d-inline-block justify-content-center text-center p-3"> -->
+	<!-- 			<strong class="fs-3">CJU</strong> -->
+	<!-- 			&lt;!&ndash; <div class="addition" th:text="${airport.apName}">제주</div> &ndash;&gt; -->
+	<!-- 		</div> -->
+	<!-- 		<div class="d-inline-block text-center p-3"> -->
+	<!-- 			<div>07:55 ~ 09:05</div> -->
+	<!-- 			<div> -->
+	<!-- 				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16"> -->
+	<!-- 	  				<path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/> -->
+	<!-- 				</svg> -->
+	<!-- 				 -->
+	<!-- 			</div> -->
+	<!-- 			&lt;!&ndash; <div class="d-inline-block pe-2" th:text="${airflight.afEconomy}">이코노미</div> -->
+	<!-- 			<div class="d-inline-block ps-2" th:text="${airflight.alNo}">B737-800</div> &ndash;&gt; -->
+	<!-- 		</div> -->
+	<!-- 		<div class="d-inline-block justify-content-center text-center p-3"> -->
+	<!-- 			<strong class="fs-3">GMP</strong> -->
+	<!-- 			<div class="addition">서울/김포</div> -->
+	<!-- 		</div> -->
+	<!-- 	</div> -->
+	<!-- </div> -->
 <!-- 항공권 정보 -->
 <!-- 운임정보  -->
 <div class="container mt-5">
@@ -81,11 +81,13 @@
   </thead>
   <tbody>
 		<tr>
-			<!-- <td>KRW <strong th:text="${price.prAirfare}">54,900</strong></td>
-			<td>KRW <strong th:text="${price.prFuelSurcharge}">30,800</strong> </td>
-			<td>KRW <strong th:text="${price.prAirportUsageFee}">8,000</strong> </td>
-			<td>KRW <strong th:text="${price.prDiscount}">0</strong></td>
-			<td>KRW <strong th:text="${price.prTotal}">93,700</strong> </td> -->
+			    <td>KRW <strong >54,900</strong></td>
+			<td>KRW <strong >30,800</strong> </td>
+			<td>KRW <strong >8,000</strong> </td>
+			<!-- <td>KRW <strong th:text="${price.prDiscount}">0</strong></td> -->
+			<td>KRW <strong>0</strong></td>
+			<!-- <td>KRW <strong th:text="${price.prTotal}">93,700</strong> </td> -->
+			<td>KRW <strong>93,700</strong> </td>
 		</tr>
 	</tbody>
 </table>
