--- a/src/main/resources/templates/footerNav.html
+++ b/src/main/resources/templates/footerNav.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="f_info">
 		<div class="f_addr">
-			<p>JB항공</p>
+			<p style="font-size:20px; margin-bottom: 20px;">JB항공</p>
 			<p>
 				<span>고객센터. 1688-1688</span> |
 				<span>(9:00 ~ 19:00)</span>
@@ -18,7 +18,7 @@
 				<span>사업자등록번호. 101-00-00000</span> |
 				<span>주소. 경기도 고양시 덕양구 동헌로 305</span>
 			</p>
-			<copyright>Copyright ⓒ 2022 JB Air. All Rights Reserved.</copyright>
+			<p>Copyright ⓒ 2022 JB Air. All Rights Reserved.</p>
 		</div>
 	</div>		
 </body>
