--- a/src/main/resources/templates/reservation/flightsearch.html
+++ b/src/main/resources/templates/reservation/flightsearch.html
@@ -51,13 +51,13 @@
 								</div>
 
 								<div class="plan_date selector_option">
-									<label for="depart_date" class="sub-airport-tit">탑승일</label>
+									<label for="depart_date" class="sub-airport-tit" style="margin-right:15px;">탑승일</label>
 									<input class="depart_date selector_box" id="depart_date" name="depDate" type="date" pattern="yyyymmdd">
 								</div>
 
 								<div class="passenger_count">
 									<div class="adult_count count_box">
-										<label for="adult_count" class="sub-passenger-tit">성인</label>
+										<div class="sub-passenger-tit">성인</div>
 										<div class="btn-group" role="group">
 											<button type="button" class="btn btn-secondary" id="aMinus">-</button>
 											<div class="input_container">
@@ -67,7 +67,7 @@
 										</div>
 									</div>
 									<div class="teen_count count_box">
-										<label for="teen_count" class="sub-passenger-tit">소아</label>
+										<div class="sub-passenger-tit">소아</div>
 										<div class="btn-group" role="group">
 											<button type="button" class="btn btn-secondary" id="tMinus">-</button>
 											<div class="input_container">
@@ -78,7 +78,7 @@
 										</div>
 									</div>
 									<div class="baby_count count_box">
-										<label for="baby_count" class="sub-passenger-tit">유아</label>
+										<div class="sub-passenger-tit">유아</div>
 										<div class="btn-group" role="group">
 											<button type="button" class="btn btn-secondary" id="bMinus">-</button>
 											<div class="input_container">
