--- a/src/main/resources/static/css/headerNav.css
+++ b/src/main/resources/static/css/headerNav.css
@@ -2,7 +2,7 @@
 nav {
     width: 1100px;
     margin: 0 auto;
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .logo, .gnb, .lnb{
@@ -26,7 +26,7 @@ nav {
 .lnb {
     float: right;
     width: 423px;
-    text-align: center;
+    text-align: right;
 }
 
 .logo a {
