--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -9,7 +9,7 @@
 	<main class="container mx-auto" style="max-width: 500px">
 		<h1 class="d-flex justify-content-center mt-5">로그인</h1>
 		<!-- action -->
-		<form action="/login/loginPage.do" method="post" class="mt-5">
+		<form action="/signup/loginPage.do" method="post" class="mt-5">
 		  <div class="form-floating  mb-3 ">
 		      <input name="ctId" type="text" class="form-control" id="inputCtId" placeholder="아이디를 입력하세요">
 		    <label for="inputCtId" class="col-sm-2 col-form-label">아이디를 입력하세요</label>
