--- a/src/main/resources/templates/reservation/baggage.html
+++ b/src/main/resources/templates/reservation/baggage.html
@@ -31,8 +31,8 @@
                                 <!--// 구간 -->
                                 <!-- 출발 -->
                                 <div class="service_name first">
-                                    <strong class="tit airport departure">GMP</strong>
-                                    <span class="addition">서울/김포</span>
+                                    <strong class="tit airport departure" th:text="${si.getDepAprt()}">GMP</strong>
+                                    <span class="addition" th:text="${si.getDepAprtNm()}">서울/김포</span>
                                 </div>
                                 <!-- 출발 -->
                                 <!-- 설명 -->
@@ -40,8 +40,8 @@
                                 <!--// 설명 -->
                                 <!-- 도착 -->
                                 <div class="service_name last">
-                                    <strong class="tit airport arrival">CJU</strong>
-                                    <span class="addition">제주</span>
+                                    <strong class="tit airport arrival" th:text="${si.getLandAprt()}">CJU</strong>
+                                    <span class="addition" th:text="${si.getLandAprtNm()}">제주</span>
                                 </div>
                                 <!-- 도착 -->
                             </div>
@@ -94,7 +94,7 @@
                                             <span th:id="'p_bweight_'+${i}">15</span>
                                             kg
                                         </p>
-                                        <p>KRW 0</p>
+                                        <div>KRW <span th:text="${session.pSession.getP().get(i).getPgBaggage*1000}" th:id="'baggageCharge_'+${i}"></span></div>
                                     </div>
                                 </div>
                             </li>
@@ -122,7 +122,7 @@
                             <span>KRW</span>
                         </dt>
                         <dd>
-                            <span>0</span>
+                            <span id="baggageChargePrice" th:text="${15000}">0</span>
                         </dd>
                     </dl>
                 </div>
