--- a/src/main/resources/templates/reservation/reservationPay.html
+++ b/src/main/resources/templates/reservation/reservationPay.html
@@ -64,7 +64,7 @@
 		<h6>결제 정보</h6>
 		<div class="d-flex justify-content-between pt-2" style="background:  #eee;">
 			<p class=" ps-3"><strong>주문 금액</strong></p>
-			<p class="pe-3" >KRW 93,700</p>
+			<div class="pe-3" >KRW </div> <span th:text="${price.getPrTotal()}"></span>
 		</div>
 		<div class="d-flex justify-content-between pt-2" style="background:  #eee;">
 			<p class=" ps-3"><strong>쿠폰 할인 금액</strong></p>
@@ -72,7 +72,7 @@
 		</div>
 		<div class="d-flex justify-content-between text-center" style="color: red; background: #F08080;">
 			<p class="ps-3"><strong>총 결제 금액</strong></p>
-			<p class="pe-3">KRW 93,700</p>
+			<div class="pe-3">KRW </div> <span th:text="${price.getPrTotal()}"></span>
 		</div>
 	</div>
 	
@@ -132,7 +132,7 @@
    	</div>
    	<div class="d-flex justify-content-center container m-5">
    		<div>
-            <a class="btn btn-danger px-5" href="javascript:void(0)" onclick="chk()">KRW 93,700 결제하기</a>
+            <a class="btn btn-danger px-5" href="/reservation/payComplete.do" onclick="chk()">KRW <span th:text="${price.getPrTotal()}"></span> 결제하기</a>
         </div>
    	</div>
    	<!-- footer -->
