--- a/src/main/resources/templates/reservation/reservationPayComplete.html
+++ b/src/main/resources/templates/reservation/reservationPayComplete.html
@@ -18,7 +18,7 @@
 		        </p>
 		        <div class="">
 			        <ul class="">
-						<li>박윤찬 님의 발권이 완료되었습니다.</li>
+						<li>박윤찬님의 발권이 완료되었습니다. </li>
 						<li>E-ticket의 경우 마이페이지에서 확인이 가능합니다.</li>
 					</ul>
 		        </div>
@@ -29,11 +29,11 @@
 		</div>
 		
 		<div class="border border-dark container mt-5 rounded p-2">
-			예약 번호 : TD5UA2
-			<p> 항공일정   | 김포->제주, 제주->김포</p>
+			예약 번호 : <span>TD5UA2</span>
+			<p> 항공일정   | 김해 -> 제주></span></p>
 			<p> 예약상태   | 발권완료</p>
-			<p> 탑승객수   | 2명</p>
-			<p> 출/도착시간 | 2022.10.10(월)  07 : 00 ~ 09 : 10, 2022.10.14(금) 13 : 10 ~ 15 : 50</p>
+			<p> 탑승객수   | <span th:text="${rSession.getRvMatureAdult()+rSession.getRvMatureTeen()+rSession.getRvMatureBaby()}+'명'"></span></p>
+			<p> 출/도착시간 | <span>2022.10.10(월)  07 : 00 ~ 09 : 10, 2022.10.14(금) 13 : 10 ~ 15 : 50</span></p>
 		</div>
 		
 		<div>
@@ -64,12 +64,12 @@
 					<!-- loop -->
 					<tr>
 						<td>1</td>
-						<td>박윤찬</td>
-						<td>KRW 54,900</td>
+						<td >박윤찬</td>
+						<td th:text="'KRW '+${price.getPrTotal()}">KRW 54,900</td>
 						<td>KRW 30,800</td>
 						<td>KRW 8,000</td>
 						<td>KRW 0</td>
-						<td>KRW 93,700</td>
+						<td th:text="'KRW '+${price.getPrTotal()+30800 + 8000}">KRW 93,700</td>
 					</tr>
 					<!-- // loop -->
 				</tbody>
