--- a/src/main/resources/templates/event/eventPage.html
+++ b/src/main/resources/templates/event/eventPage.html
@@ -12,35 +12,14 @@
 	<header th:include="/headerNav"></header>
 	<div class="container">
 		<div class="container_main">
-			<div class="section_event">
+			<div class="section_event" style="margin-top:60px;">
 				<div class="main_tit_wrap">
 					<h2 class="main_tit">이벤트</h2>
 				</div>
-				<div class="event_list">
-					<div class="event_list_area">
-						<div class="slick-list">
-							<div class="slick-slide1">이벤트1</div>
-							<div class="slick-slide2">이벤트2</div>
-						</div>
-					</div>
-					<a class="btn_prev slick-arrow" href="#none" style="display: block;">이벤트 이전보기</a>
-					<a class="btn_next slick-arrow" href="#none" style="display: block;">이벤트 다음보기</a>
-				</div>
 			</div>
 			<div class="tab_wrap" id="tab_wrap_id">
-				<ul id="tabUl" class="tab n2">
-					<li id="tabHead1" class="on">
-						<a href="#" id="tabHead1">
-							<span>진행중인 이벤트</span>
-						</a>
-					</li>
-					<li id="tabHead2">
-						<a href="#" id="tabHead2">
-							<span>종료된 이벤트</span>
-						</a>
-					</li>
-				</ul>
-				<div class="evt_wrap">
+
+				<div class="evt_wrap" style="margin-top:60px;">
 					<ul class="evt_list">
 						<li>
 							<a href="#pop_info_1" class="btn_open">
