--- a/src/main/resources/templates/reservation/reservationPayComplete.html
+++ b/src/main/resources/templates/reservation/reservationPayComplete.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header th:include="/headerNav"></header>
-	<div class="container mt-5" style="margin-top: 8rem !important; padding-bottom: 160px">
+	<div class="container" style="padding-bottom: 160px; margin:0 auto; width: 1100px; margin-top:150px;">
 		<div class="d-flex ">
 			<div class="">
 		        <p class="">
