마지막 작업

--- a/src/main/resources/templates/reservation/passenger.html
+++ b/src/main/resources/templates/reservation/passenger.html
@@ -217,8 +217,7 @@
                                                     <div>
                                                         <select class="w170">
                                                             <option value="">YYYY</option>
-                                                            <option value="2009">2009</option>
-                                                            <option value="2009">2008</option>
+                                                            <option th:each="year: ${#numbers.sequence(1990, 2022)}" th:text="${year}" value="2009">2009</option>
                                                         </select>
                                                         <select class="w150">
                                                             <option value="">MM</option>
@@ -328,8 +327,7 @@
                                                     <div>
                                                         <select class="w170">
                                                             <option value="">YYYY</option>
-                                                            <option value="2009">2009</option>
-                                                            <option value="2009">2008</option>
+                                                            <option th:each="year: ${#numbers.sequence(1990, 2022)}" th:text="${year}" value="2009">2009</option>
                                                         </select>
                                                         <select class="w150">
                                                             <option value="">MM</option>
