--- a/src/main/resources/templates/reservation/reservationPay.html
+++ b/src/main/resources/templates/reservation/reservationPay.html
@@ -103,15 +103,12 @@
 							<span >
 								<select>
 									<option value="">입금 은행 선택</option>
-									<option>은행 1</option>
-									<option>은행 2</option>
-									<option>은행 3</option>
-									<option>은행 4</option>
-									<option>은행 5</option>
-									<option>은행 6</option>
-									<option>은행 7</option>
-									<option>은행 8</option>
-									<option>은행 9</option>
+									<option>우리은행</option>
+									<option>국민은행</option>
+									<option>기업은행</option>
+									<option>농협은행</option>
+									<option>카카오뱅크</option>
+									<option>카카오페이</option>
 								</select>
 							</span>
 						</div>
